--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -121,7 +121,7 @@
             <!-- service part end here -->
 
             <!-- user log out btn -->
-            <div class="log-out">
+            <div onclick="handleLogout" class="log-out">
                 <ul class="user-logout">
                     <li>
                         <i class="fa fa-sign-out" aria-hidden="true"></i>
@@ -463,7 +463,13 @@
     </div>
 
 
+    <script>
+        const handleLogout = () => {
+            localStorage.removeItem('currentUser')
+            window.location.href = '/login.html'
 
+        }
+    </script>
 
 
     <!-- JavaScript Libraries -->
