--- a/admin/editdetails.html
+++ b/admin/editdetails.html
@@ -137,7 +137,7 @@
             <!-- service part end here -->
 
             <!-- user log out btn -->
-            <div class="log-out">
+            <div onclick="handleLogout()" class="log-out">
                 <ul class="user-logout">
                     <li>
                         <i class="fa fa-sign-out" aria-hidden="true"></i>
@@ -821,7 +821,13 @@
     </div>
 
 
+    <script>
+        const handleLogout = () => {
+            localStorage.removeItem('currentUser')
+            window.location.href = '/login.html'
 
+        }
+    </script>
 
 
     <!-- JavaScript Libraries -->
