--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -325,7 +325,7 @@
 
                                         <div class="two-cols">
                                             <label>
-                                                StartUp Email address * [can't change]
+                                                StartUp Email address
                                                 <input type="email" name="email_StartUp" id="startupUserEmail" required>
                                             </label>
 
