--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -181,43 +181,9 @@
                     <h6 class="mb-0">Inbox</h6>
                 </div>
                 <div class="card-body p-3">
-                    <ul class="list-group">
-                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
-                            <div class="avatar me-3">
-                                <!--------------------------------- MENTOR LOGO------------------------------------->
-                                <img src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/kal-visuals-square.jpg"
-                                    alt="kal" class="border-radius-lg shadow">
-                            </div>
-                            <div class="d-flex align-items-start flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Startup Name</h6>
-                                <p class="text-xxs">Unique ID</p>
-                                <p class="mb-0 text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Ratione, iste voluptatibus error quasi architecto cumque voluptates sint fugiat nemo
-                                    distinctio labore minima deserunt ipsa aspernatur assumenda repellat accusamus,
-                                    perferendis hic debitis! Laudantium, sit sed, culpa dignissimos sint dolorum ex
-                                    illum harum expedita temporibus quibusdam facilis? Ipsam rerum fuga assumenda.
-                                    Omnis!</p>
-                            </div>
-                        </li>
-                        <hr>
-                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
-                            <div class="avatar me-3">
-                                <img src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/marie.jpg"
-                                    alt="kal" class="border-radius-lg shadow">
-                            </div>
-                            <div class="d-flex align-items-start flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Admin</h6>
-                                <p class="text-xxs">Unique ID</p>
-                                <p class="mb-0 text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
-                                    facere praesentium vitae consequuntur nostrum ducimus architecto necessitatibus
-                                    ipsam sunt quos molestiae exercitationem corporis ipsum dicta nisi ab rerum, ad
-                                    voluptatem, minus sit. Debitis ipsam repellat ullam saepe, incidunt voluptas unde
-                                    temporibus officiis exercitationem veniam, impedit totam accusantium accusamus at
-                                    laborum!</p>
-                            </div>
-                        </li>
-                        <hr>
-                        <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
+                    <ul id="messageCard" class="list-group">
+
+                        <!-- <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                             <div class="avatar me-3">
                                 <img src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/ivana-square.jpg"
                                     alt="kal" class="border-radius-lg shadow">
@@ -232,6 +198,7 @@
                                     eius. Animi magnam necessitatibus iusto cum totam voluptates autem nostrum quis!</p>
                             </div>
                         </li>
+                        <hr> -->
                     </ul>
                 </div>
             </div>
@@ -680,31 +647,32 @@
                 </div>
             </div>
             <div class="card-body">
-                <form action="">
+                <form id="mentorMessageForm" action="">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="form-control-label" for="input-subject">Subject</label>
-                                <input type="text" id="input-subject" class="form-control" placeholder="Text" value="">
+                                <input type="text" name="subject" id="input-subject" class="form-control"
+                                    placeholder="Text" value="">
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="form-control-label" for="input-uniqueID_Message">Unique ID</label>
-                                <input type="text" id="input-uniqueID_Message" class="form-control"
-                                    placeholder="unique ID">
+                                <input required type="text" name="uniqueId" id="input-uniqueID_Message"
+                                    class="form-control" placeholder="unique ID">
                             </div>
                         </div>
                         <div class="col-lg-12">
                             <div class="form-group">
                                 <label class="form-control-label" for="input-Message_sendAmessage_form">Message</label>
-                                <input type="textarea" id="input-Message_sendAmessage_form" class="form-control"
-                                    placeholder="Message">
+                                <input required type="textarea" name="message" id="input-Message_sendAmessage_form"
+                                    class="form-control" placeholder="Message">
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn bg-gradient-primary">Send</button>
+                    <button type="submit" class="btn bg-gradient-primary">Send</button>
 
                 </form>
             </div>
