--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -197,7 +197,7 @@
 
   <!-- <script>
     // Fetch data from backend
-    fetch('http://localhost:5000/admin/getAllStartUp?role=startUp')
+    fetch('https://qstartupserver.onrender.com/admin/getAllStartUp?role=startUp')
       .then(response => response.json())
       .then(data => {
         // Get table body element
