--- a/index.html
+++ b/index.html
@@ -703,6 +703,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <h5 class="text-white mb-4">Visitors</h5>
+                    <div id="google_translate_element"></div>
                     <!--
 
                             <div class="row g-2">
