--- a/team.html
+++ b/team.html
@@ -139,7 +139,7 @@
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
                             <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/abcba248" style="min-width:320px;height:630px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/consult-pragya" style="min-width:320px;height:630px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
                         </div>
