mentor status add

--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -122,7 +122,7 @@
             <!-- service part end here -->
 
             <!-- user log out btn -->
-            <div onclick="handleLogout" class="log-out">
+            <div onclick="handleLogout()" class="log-out">
                 <ul class="user-logout">
                     <li>
                         <i class="fa fa-sign-out" aria-hidden="true"></i>
