--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -183,6 +183,7 @@
                 <div class="card-body p-3">
                     <ul id="messageCard" class="list-group">
 
+                        <p>You have no message currently</p>
                         <!-- <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                             <div class="avatar me-3">
                                 <img src="https://demos.creative-tim.com/soft-ui-dashboard/assets/img/ivana-square.jpg"
