status update don

--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -213,23 +213,21 @@
                     <ul class="list-group">
                         <li class="list-group-item border-0 px-0">
                             <div class="form-check form-switch ps-0">
-                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault"
-                                    checked="">
+                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault">
                                 <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
                                     for="flexSwitchCheckDefault">Email me when someone sends a message</label>
                             </div>
                         </li>
                         <li class="list-group-item border-0 px-0">
                             <div class="form-check form-switch ps-0">
-                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault1">
+                                <input class="form-check-input ms-auto" type="checkbox" id="MentorshipStatusCheckbox">
                                 <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
-                                    for="flexSwitchCheckDefault1">Available to provide Mentorship</label>
+                                    for="MentorshipStatusCheckbox">Available to provide Mentorship</label>
                             </div>
                         </li>
                         <li class="list-group-item border-0 px-0">
                             <div class="form-check form-switch ps-0">
-                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault2"
-                                    checked="">
+                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault2">
                                 <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
                                     for="flexSwitchCheckDefault2">Email me for new events</label>
                             </div>
