--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -243,7 +243,8 @@
                         </li>
                         <li class="list-group-item border-0 px-0">
                             <div class="form-check form-switch ps-0">
-                                <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault1">
+                                <input id="MentorshipStatusCheckbox" class="form-check-input ms-auto" type="checkbox"
+                                    id="flexSwitchCheckDefault1">
                                 <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
                                     for="flexSwitchCheckDefault1">Available to recieve Mentorship </label>
                             </div>
