--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -337,7 +337,7 @@
                                         <div class="two-cols">
                                             <label>
                                                 Registered State
-                                                <input type="text" name="Citizenship_StartUp">
+                                                <input type="text" name="state_StartUp">
                                             </label>
                                             <label>
                                                 Registered City
@@ -365,7 +365,7 @@
                                         </label>
                                         <label>
                                             MSME Certificate Number
-                                            <input type="text" name="state_StartUp">
+                                            <input type="text" name="Certificate_StartUp">
                                         </label>
                                         <label>
                                             Profile Picture
