--- a/admin/editdetails.html
+++ b/admin/editdetails.html
@@ -691,7 +691,7 @@
                                         <div class="two-cols">
                                             <label>
                                                 Registered State
-                                                <input type="text" name="Citizenship_StartUp">
+                                                <input type="text" name="State">
                                             </label>
                                             <label>
                                                 Registered City
@@ -719,7 +719,7 @@
                                         </label>
                                         <label>
                                             MSME Certificate Number
-                                            <input type="text" name="state_StartUp">
+                                            <input type="text" name="Certificate_StartUp">
                                         </label>
                                         <label>
                                             Profile Picture
