--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -202,6 +202,8 @@
                 </div>
                 <div class="card-body p-3">
                     <ul id="messageCard" class="list-group">
+
+                        currently you have no message
                         <!-- <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
                             <div class="avatar me-3">
                                 ------------------------------- MENTOR LOGO-----------------------------------
